--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
-        <h1>This works</h1>
+    <div class="js-clock">
+        <h1>00:00</h1>
+    </div>
+    <script src="clock.js"></script>
 </body>
 </html>
