--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <form class="js-form form">
         <input type="text" placeholder="What is your name?"/>
     </form>
-    <h4 class="js-greetings greeting"></h4>
+    <h4 class="js-greetings greetings"></h4>
     <script src="clock.js"></script>
-    <script src="greeting.js"></script>
+    <script src="greetting.js"></script>
 </body>
 </html>
