--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo list function</title>
     <link rel="stylesheet" href="index.css">
@@ -15,7 +15,13 @@
         <input type="text" placeholder="What is your name?"/>
     </form>
     <h3 class="js-greetings greetings"></h3>
+    <form class="js-toDoForm"> 
+        <input type="text" placeholder="Write a to do">
+    </form>
+    <ul class="js-toDoList">
+    </ul>
     <script src="clock.js"></script>
     <script src="greetting.js"></script>
+    <script src="todo.js"></script>
 </body>
 </html>
